--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="scrollreveal.js"></script>
-    <link rel="shortcut icon" href="FavIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./imgs/FavIcon.png" type="image/x-icon">
     <title>ToDo App</title>
   </head>
   <body>
@@ -42,6 +42,6 @@
           </ul>
         </div>
       </main>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
